@@ -2,6 +2,8 @@ ovirt-host-deploy -- oVirt host deploy
 
 ????-??-?? - Version 1.3.0
 
+ * gluster: glusterpmd: support for glusterpmd configuration.
+   rhbz#1138198.
  * kdump: initial support. rhbz#1079821.
  * vdsmhooks: fix package installation.
  * vdsm: fix dmidecode output parsing, rhbz#1109342.
